tests/errors/test_05.x
// Incompatible type for assignment

fn main() -> void {
    let x: i64 = true;
    let y: bool = 21;
    let z: i8 = "hello";
}